--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                         <a class="ml-8" href="">Shop</a>
                         <a class="ml-8" href="">All Fruits</a>
                     </div>
-                    <div class="flex items-center gap-4 ml-[90px]  lg:ml-[130px] md:ml-[200px]">
+                    <div class="flex items-center gap-4 ml-[170px]  lg:ml-[130px] md:ml-[200px]">
                         <img src="./images/main.png" alt="">
-                        <p class=" lg:text-white text-2xl font-extrabold md:text-[40px] lg:text-[40px] font-bold">Fruit
+                        <p class=" lg:text-white text-2xl font-extrabold  md:text-[40px] lg:text-[40px] font-bold">Fruit
                             Burst</p>
                     </div>
                     <div class="hidden md:hidden lg:block ">
@@ -188,7 +188,7 @@
                     Latin literature from 45 BC, making it over 2000 years old.</p>
             </div>
             <div class="ml-5 md:ml-[180px]">
-                <div class="flex text-center ml-3  items-center gap-4 mt-[30px] lg:mt-5">
+                <div class="flex text-center ml-[130px] md:ml-[20px] items-center gap-4 mt-[30px] lg:mt-5">
                     <div class="">
                         <div class="flex ">
                             <h1 class="text-5xl font-extrabold">23</h1>
@@ -237,7 +237,7 @@
                         <h2 class="mt-5 text-center text-2xl font-bold">12.90$ - 18.85$</h2>
                         <hr class="w-[70%] ml-[60px] mt-4">
                         <p class="text-center mt-4">Apples</p>
-                        <img class="ml-[120px] md:ml-[100px] lg:ml-[70px] mt-[20px]" src="./images/Group 24.svg" alt="">
+                        <img class="ml-[220px] md:ml-[100px] lg:ml-[70px] mt-[20px]" src="./images/Group 24.svg" alt="">
 
                         <div class="text-center mt-[32px] mb-[30px]">
 
@@ -246,7 +246,7 @@
                             <dialog id="my_modal_1" class="modal">
                                 <form method="dialog" class="modal-box">
 
-                                    <img class="w-[45%] ml-[90px] md:ml-[140px] md:w-[40%] lg:ml-[140px] lg:w-[40%]"
+                                    <img class="w-[45%] ml-[120px] md:ml-[140px] md:w-[40%] lg:ml-[140px] lg:w-[40%]"
                                         src="./images/fruit6.png" alt="">
 
                                     <h3 class="mt-4 font-bold text-lg">Apples</h3>
@@ -254,10 +254,10 @@
                                     <p class="mt-4">Professional employees are there for you to pick the most amazing
                                         and fresh fruits.</p>
 
-                                    <img class="pl-[100px] md:pl-[160px] lg:pl-[160px] mt-5" src="./images/Group 24.svg"
+                                    <img class="pl-[150px] md:pl-[160px] lg:pl-[160px] mt-5" src="./images/Group 24.svg"
                                         alt="">
 
-                                    <div class="modal-action pr-[70px] md:pr-[130px] lg:pr-[130px]">
+                                    <div class="modal-action pr-[140px] md:pr-[130px] lg:pr-[130px]">
 
                                         <button class="btn mr-2 bg-transparent text-common border-common">Close</button>
                                         <button class="btn bg-common text-white">Buy Now</button>
@@ -278,7 +278,7 @@
                         <h2 class="mt-5 text-center text-2xl font-bold">12.90$ - 18.85$</h2>
                         <hr class="w-[70%] ml-[60px] mt-4">
                         <p class="text-center mt-4">Orange</p>
-                        <img class="ml-[120px] md:ml-[100px] lg:ml-[70px] mt-[20px]" src="./images/Group 24.svg" alt="">
+                        <img class="ml-[220px] md:ml-[100px] lg:ml-[70px] mt-[20px]" src="./images/Group 24.svg" alt="">
 
                         <div class="text-center mt-[32px] mb-[30px]">
 
@@ -287,7 +287,7 @@
                             <dialog id="my_modal_2" class="modal">
                                 <form method="dialog" class="modal-box">
 
-                                    <img class="w-[45%] ml-[90px] md:ml-[140px] md:w-[40%] lg:ml-[140px] lg:w-[40%]"
+                                    <img class="w-[45%] ml-[120px] md:ml-[140px] md:w-[40%] lg:ml-[140px] lg:w-[40%]"
                                         src="./images/fruit7.png" alt="">
 
                                     <h3 class="mt-4 font-bold text-lg">Orange</h3>
@@ -295,10 +295,10 @@
                                     <p class="mt-4">Professional employees are there for you to pick the most amazing
                                         and fresh fruits.</p>
 
-                                    <img class="pl-[100px] md:pl-[160px] lg:pl-[160px] mt-5" src="./images/Group 24.svg"
+                                    <img class="pl-[150px] md:pl-[160px] lg:pl-[160px] mt-5" src="./images/Group 24.svg"
                                         alt="">
 
-                                    <div class="modal-action pr-[70px] md:pr-[130px] lg:pr-[130px]">
+                                    <div class="modal-action pr-[140px] md:pr-[130px] lg:pr-[130px]">
 
                                         <button class="btn mr-2 bg-transparent text-common border-common">Close</button>
                                         <button class="btn bg-common text-white">Buy Now</button>
@@ -319,7 +319,7 @@
                         <h2 class="mt-5 text-center text-2xl font-bold">12.90$ - 18.85$</h2>
                         <hr class="w-[70%] ml-[60px] mt-4">
                         <p class="text-center mt-4">Red Dragon</p>
-                        <img class="ml-[120px] md:ml-[100px] lg:ml-[70px] mt-[20px]" src="./images/Group 24.svg" alt="">
+                        <img class="ml-[220px] md:ml-[100px] lg:ml-[70px] mt-[20px]" src="./images/Group 24.svg" alt="">
 
                         <div class="text-center mt-[32px] mb-[30px]">
 
@@ -328,7 +328,7 @@
                             <dialog id="my_modal_3" class="modal">
                                 <form method="dialog" class="modal-box">
 
-                                    <img class="w-[45%] ml-[90px] md:ml-[140px] md:w-[40%] lg:ml-[140px] lg:w-[40%]"
+                                    <img class="w-[45%] ml-[120px] md:ml-[140px] md:w-[40%] lg:ml-[140px] lg:w-[40%]"
                                         src="./images/fruit8.png" alt="">
 
                                     <h3 class="mt-4 font-bold text-lg">Red Dragon</h3>
@@ -336,10 +336,10 @@
                                     <p class="mt-4">Professional employees are there for you to pick the most amazing
                                         and fresh fruits.</p>
 
-                                    <img class="pl-[100px] md:pl-[160px] lg:pl-[160px] mt-5" src="./images/Group 24.svg"
+                                    <img class="pl-[150px] md:pl-[160px] lg:pl-[160px] mt-5" src="./images/Group 24.svg"
                                         alt="">
 
-                                    <div class="modal-action pr-[70px] md:pr-[130px] lg:pr-[130px]">
+                                    <div class="modal-action pr-[140px] md:pr-[130px] lg:pr-[130px]">
 
                                         <button class="btn mr-2 bg-transparent text-common border-common">Close</button>
                                         <button class="btn bg-common text-white">Buy Now</button>
@@ -360,7 +360,7 @@
                         <h2 class="mt-5 text-center text-2xl font-bold">12.90$ - 18.85$</h2>
                         <hr class="w-[70%] ml-[60px] mt-4">
                         <p class="text-center mt-4">Banana</p>
-                        <img class="ml-[120px] md:ml-[100px] lg:ml-[70px] mt-[20px]" src="./images/Group 24.svg" alt="">
+                        <img class="ml-[220px] md:ml-[100px] lg:ml-[70px] mt-[20px]" src="./images/Group 24.svg" alt="">
 
                         <div class="text-center mt-[32px] mb-[30px]">
 
@@ -369,7 +369,7 @@
                             <dialog id="my_modal_4" class="modal">
                                 <form method="dialog" class="modal-box">
 
-                                    <img class="w-[45%] ml-[90px] md:ml-[140px] md:w-[40%] lg:ml-[140px] lg:w-[40%]"
+                                    <img class="w-[45%] ml-[120px] md:ml-[140px] md:w-[40%] lg:ml-[140px] lg:w-[40%]"
                                         src="./images/fruit9.png" alt="">
 
                                     <h3 class="mt-4 font-bold text-lg">Banana</h3>
@@ -377,10 +377,10 @@
                                     <p class="mt-4">Professional employees are there for you to pick the most amazing
                                         and fresh fruits.</p>
 
-                                    <img class="pl-[100px] md:pl-[160px] lg:pl-[160px] mt-5" src="./images/Group 24.svg"
+                                    <img class="pl-[150px] md:pl-[160px] lg:pl-[160px] mt-5" src="./images/Group 24.svg"
                                         alt="">
 
-                                    <div class="modal-action pr-[70px] md:pr-[130px] lg:pr-[130px]">
+                                    <div class="modal-action pr-[140px] md:pr-[130px] lg:pr-[130px]">
 
                                         <button class="btn mr-2 bg-transparent text-common border-common">Close</button>
                                         <button class="btn bg-common text-white">Buy Now</button>
@@ -472,14 +472,14 @@
             <div class="flex flex-col-reverse md:flex-col-reverse lg:flex-row gap-8">
                 <div>
                     <div class="flex-none lg:flex gap-[24px] mb-[25px]">
-                        <div class="ml-[170px] md:ml-[255px] lg:ml-0">
+                        <div class="ml-[250px] md:ml-[255px] lg:ml-0">
                             <img class="bg-[#42424250] rounded-full p-[18px]" src="./images/group 1.svg" alt="">
                         </div>
                         <div>
-                            <h1 class="ml-[120px] md:ml-[200px] mt-[24px] lg:ml-0 lg:mt-0  text-2xl font-extrabold">
+                            <h1 class="ml-[190px] md:ml-[200px] mt-[24px] lg:ml-0 lg:mt-0  text-2xl font-extrabold">
                                 Dedicated Team</h1>
 
-                            <hr class="ml-[140px] md:ml-[200px] lg:ml-0 mt-[21px] w-[30%] h-1 bg-[#2b2a2ace]">
+                            <hr class="ml-[190px] md:ml-[200px] lg:ml-0 mt-[21px] w-[30%] h-1 bg-[#2b2a2ace]">
 
                             <p class="hidden lg:block mt-[16px]">Professional employees are there for you to pick <br>
                                 the most amazing and fresh fruits.</p>
@@ -489,14 +489,14 @@
                         </div>
                     </div>
                     <div class="flex-none lg:flex gap-[24px] mb-[25px]">
-                        <div class="ml-[170px] md:ml-[255px] lg:ml-0">
+                        <div class="ml-[250px] md:ml-[255px] lg:ml-0">
                             <img class="bg-[#42424250] rounded-full p-[18px]" src="./images/love 1.svg" alt="">
                         </div>
                         <div>
-                            <h1 class="ml-[135px] md:ml-[220px] mt-[24px] lg:ml-0 lg:mt-0  text-2xl font-extrabold">
+                            <h1 class="ml-[210px] md:ml-[220px] mt-[24px] lg:ml-0 lg:mt-0  text-2xl font-extrabold">
                                 Fresh is Best</h1>
 
-                            <hr class="ml-[140px] md:ml-[200px] lg:ml-0 mt-[21px] w-[30%] h-1 bg-[#2b2a2ace]">
+                            <hr class="ml-[190px] md:ml-[200px] lg:ml-0 mt-[21px] w-[30%] h-1 bg-[#2b2a2ace]">
 
                             <p class="hidden lg:block mt-[16px]">Professional employees are there for you to pick <br>
                                 the most amazing and fresh fruits.</p>
@@ -506,14 +506,14 @@
                         </div>
                     </div>
                     <div class="flex-none lg:flex gap-[24px] mb-[0px]">
-                        <div class="ml-[170px] md:ml-[255px] lg:ml-0">
+                        <div class="ml-[250px] md:ml-[255px] lg:ml-0">
                             <img class="bg-[#42424250] rounded-full p-[18px]" src="./images/gift-box 1.svg" alt="">
                         </div>
                         <div>
-                            <h1 class="ml-[120px] md:ml-[200px] mt-[24px] lg:ml-0 lg:mt-0  text-2xl font-extrabold">Gift
+                            <h1 class="ml-[190px] md:ml-[200px] mt-[24px] lg:ml-0 lg:mt-0  text-2xl font-extrabold">Gift
                                 Certificates</h1>
 
-                            <hr class="ml-[140px] md:ml-[200px] lg:ml-0 mt-[21px] w-[30%] h-1 bg-[#2b2a2ace]">
+                            <hr class="ml-[190px] md:ml-[200px] lg:ml-0 mt-[21px] w-[30%] h-1 bg-[#2b2a2ace]">
 
                             <p class="hidden lg:block mt-[16px]">Professional employees are there for you to pick <br>
                                 the most amazing and fresh fruits.</p>
@@ -538,10 +538,10 @@
                     </div>
 
                     <div class="block lg:hidden">
-                        <h1 class="ml-[100px] md:ml-[180px] mt-[24px] lg:ml-0 lg:mt-0  text-2xl font-extrabold">
+                        <h1 class="ml-[175px] md:ml-[180px] mt-[24px] lg:ml-0 lg:mt-0  text-2xl font-extrabold">
                             Integrated Supplier</h1>
 
-                        <hr class="ml-[140px] md:ml-[200px] lg:ml-0 mt-[21px] w-[30%] h-1 bg-[#2b2a2ace]">
+                        <hr class="ml-[190px] md:ml-[200px] lg:ml-0 mt-[21px] w-[30%] h-1 bg-[#2b2a2ace]">
 
                         <p class="hidden lg:block mt-[16px]">Professional employees are there for you to pick <br> the
                             most amazing and fresh fruits.</p>
@@ -549,7 +549,7 @@
                         <p class="block lg:hidden ml-[5px] text-center lg:ml-0 mt-[16px]">Professional employees are
                             there for you to pick the most amazing and fresh fruits.</p>
                     </div>
-                    <div class="ml-[170px] md:ml-[255px] lg:ml-0">
+                    <div class="ml-[250px] md:ml-[255px] lg:ml-0">
                         <img class="bg-[#42424250] rounded-full p-[18px]" src="./images/fruit 1.svg" alt="">
                     </div>
                 </div>
@@ -563,10 +563,10 @@
                     </div>
 
                     <div class="block lg:hidden">
-                        <h1 class="ml-[100px] md:ml-[180px] mt-[24px] lg:ml-0 lg:mt-0  text-2xl font-extrabold">
+                        <h1 class="ml-[170px] md:ml-[180px] mt-[24px] lg:ml-0 lg:mt-0  text-2xl font-extrabold">
                             Sustainable Practice</h1>
 
-                        <hr class="ml-[140px] md:ml-[200px] lg:ml-0 mt-[21px] w-[30%] h-1 bg-[#2b2a2ace]">
+                        <hr class="ml-[190px] md:ml-[200px] lg:ml-0 mt-[21px] w-[30%] h-1 bg-[#2b2a2ace]">
 
                         <p class="hidden lg:block mt-[16px]">Professional employees are there for you to pick <br> the
                             most amazing and fresh fruits.</p>
@@ -574,7 +574,7 @@
                         <p class="block lg:hidden ml-[5px] text-center lg:ml-0 mt-[16px]">Professional employees are
                             there for you to pick the most amazing and fresh fruits.</p>
                     </div>
-                    <div class="ml-[170px] md:ml-[255px] lg:ml-0">
+                    <div class="ml-[250px] md:ml-[255px] lg:ml-0">
                         <img class="bg-[#42424250] rounded-full p-[18px]" src="./images/ice-cream 1.svg" alt="">
                     </div>
                 </div>
@@ -588,10 +588,10 @@
                     </div>
 
                     <div class="block lg:hidden">
-                        <h1 class="ml-[100px] md:ml-[190px] mt-[24px] lg:ml-0 lg:mt-0  text-2xl font-extrabold">The
+                        <h1 class="ml-[180px] md:ml-[190px] mt-[24px] lg:ml-0 lg:mt-0  text-2xl font-extrabold">The
                             Benefits Only</h1>
 
-                        <hr class="ml-[140px] md:ml-[200px] lg:ml-0 mt-[21px] w-[30%] h-1 bg-[#2b2a2ace]">
+                        <hr class="ml-[190px] md:ml-[200px] lg:ml-0 mt-[21px] w-[30%] h-1 bg-[#2b2a2ace]">
 
                         <p class="hidden lg:block mt-[16px]">Professional employees are there for you to pick <br> the
                             most amazing and fresh fruits.</p>
@@ -599,7 +599,7 @@
                         <p class="block lg:hidden ml-[5px] text-center lg:ml-0 mt-[16px]">Professional employees are
                             there for you to pick the most amazing and fresh fruits.</p>
                     </div>
-                    <div class="ml-[170px] md:ml-[255px] lg:ml-0">
+                    <div class="ml-[250px] md:ml-[255px] lg:ml-0">
                         <img class="bg-[#42424250] rounded-full p-[18px]" src="./images/like 1.svg" alt="">
                     </div>
                 </div>
@@ -619,7 +619,7 @@
                 <h2 class="text-white text-[40px] font-bold">Fruit Burst</h2>
             </div>
         </div>
-        <div class="grid grid-flow-col gap-4 text-white">
+        <div class="grid grid-flow-col gap-10 text-white">
             <a class="link link-hover">Home</a>
             <a class="link link-hover">About Us</a>
             <a class="link link-hover">Shop</a>
